force-app/main/default/objects/National_tax_category__c/National_tax_category__c.object-meta.xml
<CustomObject>
    <label>税分类国家</label>
    <nameField>
        <label>National Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>