force-app/main/default/objects/National_tax_category__c/fields/National_code__c.field-meta.xml
<CustomField>
    <fullName>National_code__c</fullName>
    <label>National code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>