force-app/main/default/objects/National_tax_category__c/fields/Nationnal_Tax_Catagoery_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Nationnal_Tax_Catagoery_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>Nationnal Tax Catagoery External Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>