force-app/main/default/objects/National_tax_category__c/fields/sort__c.field-meta.xml
<CustomField>
    <fullName>sort__c</fullName>
    <label>sort</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>