force-app/main/default/objects/National_tax_category__c/fields/Tax_category__c.field-meta.xml
<CustomField>
    <fullName>Tax_category__c</fullName>
    <label>Tax category</label>
    <length>10</length>
    <type>Text</type>
</CustomField>