force-app/main/default/objects/National_tax_category__c/fields/Tax_categoryRes__c.field-meta.xml
<CustomField>
    <fullName>Tax_categoryRes__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tax categoryRes</label>
    <referenceTo>Tax_category__c</referenceTo>
    <relationshipLabel>National tax category</relationshipLabel>
    <relationshipName>National_tax_categoryRES</relationshipName>
    <type>Lookup</type>
</CustomField>