force-app/main/default/objects/National_tax_category__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>National_code__c</columns>
    <columns>Tax_category__c</columns>
    <columns>Tax_categoryRes__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>